# TavukGame

./: CMakeLists.txt  README.md
include/: Game.h  GameState.h  State.h
src/: Entity.cpp  Game.cpp  Game.h  GameState.cpp  State.cpp  main.cpp
src/config/: window.ini
